# termux-ai

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.md  preflight.yml  pyproject.toml  requirements-dev.txt  requirements.txt  termux-ai.py
.github/: copilot-instructions.md
.github/workflows/: .release.yml.swp  release.yml  test.yml  tests.yml
src/termux_ai/: __init__.py  api.py  chat.py  cli.py  config.py  constants.py  ui.py
src/termux_ai/providers/: base.py  gemini.py  groq.py  mistral.py  openai.py
term_ai/: __init__.py  cli.py  config.py  ui.py
term_ai/providers/: base.py  gemini.py  openai.py
termai/: api.py  cli.py  config.py  constants.py  ui.py
termai/providers/: base.py  gemini.py  openai.py
tests/: test_basic.py  test_providers.py  test_streaming.py
