[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termux-ai"
version = "0.3.0"
description = "A lightweight CLI tool for AI integration in your terminal."
keywords = ["termai", "term-ai", "termux-ai", "cli", "ai", "termux", "gemini", "openai"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "attajak", email = "janrak@gmail.com"},
  {name = "estiaksoyeb", email = "estiakahamed122@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/attajak/termux-ai#readme"
"Bug Reports" = "https://github.com/attajak/termux-ai/issues"
"Funding" = "https://paypal.me/attajak"
"Source" = "https://github.com/attajak/termux-ai"

[project.scripts]
ai = "termai.cli:main"
